remove creation of k/v indices